--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ body {
   color: #7f7f7f;
   font-size: 45px; }
   .full-name span {
+    margin-left: 30px;
     color: #ff7d19; }
 
 .profession {
