--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,14 @@ body {
   width: 35%; }
 
 .my-photo {
-  padding: 8%; }
+  padding: 1%; }
 
 .my-photo__photo {
   max-width: 100%;
   border-radius: 50%; }
+
+.contacts {
+  padding-inline-start: 0px; }
 
 .contacts__info-block {
   display: flex;
@@ -44,7 +47,8 @@ body {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Open Sans', sans-serif;
+  padding-inline-start: 0px; }
 
 .skills__block {
   display: flex;
@@ -97,9 +101,10 @@ body {
   letter-spacing: 10px;
   color: #7f7f7f;
   font-size: 45px; }
-  .full-name span {
+  .full-name mark {
     margin-left: 30px;
-    color: #ff7d19; }
+    color: #ff7d19;
+    background: none; }
 
 .profession {
   display: flex;
@@ -117,6 +122,9 @@ body {
 
 .article__text {
   font-family: 'Open Sans', sans-serif; }
+  .article__text-ul {
+    padding-inline-start: 0px;
+    font-family: 'Open Sans', sans-serif; }
 
 .bottom {
   display: flex;
@@ -182,6 +190,12 @@ body {
   font-family: 'Open Sans', sans-serif;
   margin-block-start: 0em;
   margin-block-end: 0em; }
+
+.code-wrapper {
+  text-align: center; }
+  .code-wrapper-text {
+    display: inline-block;
+    text-align: left; }
 
 @media screen and (max-width: 1293px) {
   body {
